# alchemy-logging

./: .coveragerc  .gitignore  .gitmodules  BUILD  CMakeLists.txt  CONTRIBUTING.md  Ghenkinsfile  Jenkinsfile  Makefile  README.md  TODO.md  WORKSPACE  WORK_IN_PROGRESS.md  __init__.py  index.js  package-lock.json  package.json  setup.py  tox.ini  tsconfig.json  tslint.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  new-language-proposal.md
.github/workflows/: codeql-analysis.yml  cpp-tests.yaml  go-tests.yaml  python-release.yml  python-tests.yml  release.yml  ts-tests.yaml
alog/: __init__.py  alog.py
alog/lib/tests/: alog_extras_test.go  alog_test.go  test_utils.go
ci/: Dockerfile  release.sh  run-tests.sh
docs/: implementation-spec.md
docs/adr/: 000-template.md  001-releases.md
example/alog_example_server/: main.go
include/: logger.h
include/nlohmann/: json.hpp
lib/: BUILD  alog.go  alog_extras.go
lib/tests/: BUILD  alog_extras_test.go  alog_test.go  test_utils.go
src/: alog_config_error.ts  index.ts  logger.cpp
src/cpp/: .dockerignore  CMakeLists.txt  Dockerfile  README.md
src/cpp/ci/: develop.sh
src/cpp/include/: logger.h
src/cpp/include/alog/: logger.hpp
src/cpp/src/: logger.cpp
src/cpp/tests/: logger_test.cpp
src/cpp/tests/include/: unit_testing.h
src/cpp/tests/src/: main.cpp
src/cpp/tools/alog_fib_example/: CMakeLists.txt  main.cpp
src/cpp/tools/alog_fib_example/include/: fibonacci.h  util.h
src/cpp/tools/alog_fib_example/src/: fibonacci.cpp  util.cpp
src/go/: .gitignore  Dockerfile  README.md  WORKSPACE  go.mod
src/go/alog/: alog.go  alog_extras.go  alog_extras_test.go  alog_test.go  helpers_test.go
src/go/alog/tests/: alog_extras_test.go  test_utils.go
src/go/ci/: develop.sh  test_release.sh
src/go/example/: go.mod
src/go/example/alog_example_server/: .gitignore  BUILD  main.go  test_example_server.sh
src/go/lib/tests/: test_utils.go
src/go/tests/: alog_test.go  go.mod  test_utils.go
src/python/: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  __init__.py  pyproject.toml  requirements_test.txt  setup.py
src/python/alog/: __init__.py  alog.py  protocols.py
src/python/ci/: develop.sh  publish.sh  run-tests.sh
src/python/tests/: __init__.py  conftest.py  test_alog.py  test_alog_clean_import.py  test_protocols.py  test_util.py
src/python/tests/fixtures/duplicate_replacement/: test_case_1.py  test_case_2.py
src/python/tests/fixtures/placeholders/: test_case_3.py  test_case_4.py
src/python/util/: alog_json_converter.py  correct_log_codes.py  requirements.txt
src/ts/: .npmignore  Dockerfile  README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
src/ts/ci/: develop.sh  publish.sh
src/ts/src/: alog.ts  alog_config_error.ts  channel-log.ts  configure.ts  core.ts  formatters.ts  index.ts  types.ts
src/ts/test/: api_test.ts  helpers.ts  internals_test.ts
test/: alog_test.ts  api_test.ts  helpers.ts  internals_test.ts
tests/: __init__.py  logger_test.cpp  test_alog.py  test_alog_configure.py  test_util.py  unit_tests.py
tests/fixtures/duplicate_replacement/: test_case_1.py  test_case_1_copy.py  test_case_2.py
tests/fixtures/placeholders/: test_case_1.py  test_case_1_copy.py  test_case_2.py  test_case_2_copy.py  test_case_4.py
tests/include/: unit_testing.h
tests/src/: main.cpp
tools/alog_fib_example/: README.md  main.cpp
tools/alog_fib_example/include/: fibonacci.h  util.h
tools/alog_fib_example/src/: fibonacci.cpp  util.cpp
tools/list_channels/: list_channels.sh
util/: alog_json_converter.py  correct_log_codes.py
